examples/test/testpolicy4136.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4136
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key25: value31
      key48: value1
      key35: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value28
      podSelector:
        matchLabels:
          key42: value48
          key31: value5
